; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_sproto_release.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_sproto_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sproto_release(%struct.sproto* %0) #0 {
  %2 = alloca %struct.sproto*, align 8
  store %struct.sproto* %0, %struct.sproto** %2, align 8
  %3 = load %struct.sproto*, %struct.sproto** %2, align 8
  %4 = icmp eq %struct.sproto* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %10

6:                                                ; preds = %1
  %7 = load %struct.sproto*, %struct.sproto** %2, align 8
  %8 = getelementptr inbounds %struct.sproto, %struct.sproto* %7, i32 0, i32 0
  %9 = call i32 @pool_release(i32* %8)
  br label %10

10:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @pool_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
